--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit>=1.28.0
-torch>=2.0.0
-torchvision>=0.15.0
+torch>=2.0.0+cpu
+torchvision>=0.15.0+cpu
+paddlepaddle>=2.6.0          # CPU version
+paddleocr>=2.7.0
 opencv-python-headless>=4.8.0
+streamlit>=1.29.0
 Pillow>=10.0.0
 numpy>=1.24.0
+tqdm>=4.66.0
