--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit>=1.29.0
-torch>=2.0.0+cpu
-torchvision>=0.15.0+cpu
-paddlepaddle>=2.6.0
-paddleocr>=2.7.0
-opencv-python-headless>=4.8.0
-Pillow>=10.0.0
-numpy>=1.24.0
+streamlit==1.39.0
+torch==2.1.2
+torchvision==0.16.2
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+Pillow==10.2.0
+paddlepaddle==2.6.2
+paddleocr==2.7.3
+protobuf==3.20.3
